# job_research

./: .gitignore  README.md  pyproject.toml
job_research/: cover_template.tex  create_outputs.bat  create_outputs.py  create_outputs_gui.py  llm.py  main.py  prompts.py  resume_template.tex  scraper.py  scrapper_tool.py  serper_tool.py  user_context_example.json  user_want_example.md
