[tool.poetry]
name = "job-research"
version = "0.1.0"
description = ""
authors = ["Mael <simonmaeldev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10"
crewai = {extras = ["tools"], version = "^0.28.8"}
anthropic = "^0.25.8"
lxml = "^5.2.1"
fake-useragent = "^1.5.1"
ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
